--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
     <script src="jquery-3.7.1.min.js"></script>
-    <script src="./node_modules/animejs/lib/anime.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="node_modules/animejs/lib/anime.min.js"></script>
+    <script src="script.js"></script>
     <script src="slick-1.8.1/slick/slick.min.js"></script>
     <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
 </body>
