--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     Surfle Search Engine Mobile App
                 </h1>
                 <h3 class="portfolio-subtitle">
-                    UI design of Surfle, a search engine mobile applivation.
+                    UI design of Surfle, a search engine mobile application.
                 </h3>
                 <a type="button" href="https://www.behance.net/gallery/164011581/Surfle-Search-Engine-Mobile-App-Design"
                     target="_blank">See
