--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="exp1">
                 <div class="exp-header">
                     <h2>Mentor</h2>
-                    <h3>BINUS Student Learning Center</h3>
+                    <h3>BINUS Student Learning Community</h3>
                     <h4>West Jakarta, Indonesia (Hybrid)</h4>
                     <h5>Sep 2023 - Jan 2024</h5>
                 </div>
