--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     interactively.
                     <br>
                     I also join several student units, such as BNCC (Bina Nusantara Computer Club) and BSLC (BINUS
-                    Student Learning Club) during my study. I've become Member and Mentor in these student units
+                    Student Learning Community) during my study. I've become Member and Mentor in these student units
                     respectively. It helps me grow a lot, especially my teamwork, communication, and mentoring skills.
                 </p>
             </div>
