--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <h5>2021 - 2025</h5>
                 </div>
                 <p>BINUS University is where I study Computer Science for my Bachelor's Degree. Computer Science is a
-                    major which study about computer and its computational system. While in univeersity, I study a lot
+                    major which study about computer and its computational system. While in university, I study a lot
                     about Algorithm, Network, Database and one field which peak my interest is Interactive
                     Multimedia. Hence, I am picking Interactive Multimedia streaming program for my fourth to fifth
                     semester.
